# game_share

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  storage.py
alembic/: env.py
alembic/versions/: 10184def6526_.py  61b7b770ffc9_fix_rename_column_user_name.py  7efe45a11fd3_add_new_columns_to_users.py  948f10394ad5_make_user_name_nullable.py  ec6a337a9d2a_добавил_диски.py  ed2000d8be7a_.py  f5e88a4ac58f_sub_and_sub_plan.py
game_share_bot/: __main__.py  alembic.ini  database_controller.py  message_controller.py  migrate.py  models.py
game_share_bot/alembic/: env.py
game_share_bot/callbacks/: menu.py
game_share_bot/core/: logging.py
game_share_bot/core/callbacks/: __init__.py  action_callback_base.py  admin.py  catalog.py  confirmation.py  game.py  menu.py  rental.py  subscription.py  user.py
game_share_bot/core/filters/: __init__.py  admin.py
game_share_bot/core/handlers/: __init__.py  debug.py  menu.py  no_action.py  start.py  user.py  utils.py
game_share_bot/core/keyboards/: __init__.py  buttons.py  game.py  inline.py  subscription.py
game_share_bot/core/middlewares/: __init__.py  (+1 more)
game_share_bot/domain/: yookassa.py
game_share_bot/handlers/: __init__.py  debug.py  menu.py  start.py
game_share_bot/infrastructure/: database.py
game_share_bot/keyboards/: inline.py
game_share_bot/middlewares/: __init__.py  db_session.py
game_share_bot/models/: __init__.py  user.py
game_share_bot/scheduler/: global_vars.py  job_container.py  job_list.py  scheduler.py
sql/: drop.sql
tests/: conftest.py
tests/infrastructure/: database.py
(+145 files in other folders)
