[project]
name = "game-share-bot"
version = "0.1.0"
description = "Telegram bot for the Console Games Library"
authors = [
    {name = "Team 21", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "sqlalchemy (==2.0.43)",
    "alembic (==1.16.5)",
    "psycopg2-binary (==2.9.10)",
    "asyncpg (==0.30.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)", # ???
    "APScheduler (>=3.11.0, <4.0.0)",
    "yookassa (>=3.8.0,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"